# slackgentic-team

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  e2e-slack.md  slack-app-manifest.yaml
scripts/: generate_avatar_bank.py
src/agent_harness/: __init__.py  __main__.py  assignment.py  async_store.py  bash_policy.py  claude_channel.py  cli.py  codex_app_server.py  codex_slack_requests.py  config.py  daemon.py  deferred.py  internal_notifications.py  jsonl.py  models.py  permissions.py  personas.py  pm.py  pr_links.py  routing.py  runner.py  schedules.py  service.py  session_bridge.py  session_mirror.py  session_terminal.py  slack.py  slack_agent_requests.py  slack_app.py  slack_client.py  slack_setup.py  (+7 more)
tests/: test_assignment.py  test_bash_policy.py  test_bash_policy_properties.py  test_claude_channel.py  test_claude_provider.py  test_cli.py  test_codex_app_server.py  test_codex_provider.py  test_codex_slack_requests.py  test_config.py  test_deferred.py  test_health.py  test_jsonl.py  test_personas.py  test_pm.py  test_pm_runtime.py  test_power.py  test_properties.py  test_routing.py  test_runner.py  test_schedules.py  test_service.py  test_session_bridge.py  test_session_mirror.py  test_session_terminal.py  test_slack.py  test_slack_agent_requests.py  test_slack_app.py  test_slack_client.py  test_slack_setup.py  test_store.py  test_task_runtime.py  test_team.py  test_team_commands.py  test_todo_mirror.py  test_updates.py  test_usage.py
(+38 files in other folders)
